--- a/02-component/01-greeter.html
+++ b/02-component/01-greeter.html
@@ -11,6 +11,9 @@
         .message {
             font-size: 16pt;
         }
+        #greet-message{
+            color : blue;
+        }
     </style>
     <script type="text/babel">
         
@@ -33,7 +36,7 @@
                     <label htmlFor="">User Name :</label>
                     <input type="text" onInput={onTxtUserNameInput}/>
                     <button onClick={onBtnGreetClick}>Greet</button>
-                    <div className="message">{greetMsg}</div>
+                    <div id="greet-message">{greetMsg}</div>
                 </div>
             )
         }
