--- a/03-state-manager/03-spinner.html
+++ b/03-state-manager/03-spinner.html
@@ -10,19 +10,20 @@
     <title>StateManager - Intro</title>
     <!-- 
         01. initial version
+        02. remove the dependency on the store from the component
+        03. delegate the responsibility of creating actions to 'action creators'
 
      -->
     <script type="text/babel">
         
-        function Spinner({store}){
-            const value = store.getState()
+        function Spinner({value, dispatch, actionCreators}){
             const onDecrementClick = () => {
-                const dec_action = { type : 'DECREMENT'}
-                store.dispatch(dec_action);
+                const action = actionCreators.decrement()
+                dispatch(action);
             }
             const onIncrementClick = () => {
-                const inc_action = { type : 'INCREMENT'}
-                store.dispatch(inc_action);
+                const action = actionCreators.increment()
+                dispatch(action);
             }
             return (
                 <div>
@@ -43,13 +44,24 @@
 
         const container = document.getElementById('container');
         let root = ReactDOM.createRoot(container)
-        // root.render(React.createElement(Greeter))    
+        
 
-        // const value = store.getState()
+        const spinnerActionCreators = {
+            decrement(){
+                const action = { type : 'DECREMENT'};
+                return action;
+            },
+            increment(){
+                const action = {type : 'INCREMENT'};
+                return action;
+            }
+        }
+
         function renderApp(){
+            const value = store.getState()
             root.render(
                 <div>
-                    <Spinner store={store}/>     
+                    <Spinner value={value} dispatch={store.dispatch} actionCreators={spinnerActionCreators}/>     
                 </div>
             )
         }
